--- a/app/views/appointments/new.erb
+++ b/app/views/appointments/new.erb
@@ -1,5 +1,5 @@
 <h1>Appointments</h1>
-<form method="POST" action="/appointments/:user">
+<form method="POST" action="/appointments">
 <div>
 <label for="week_number"><h2>Choose Week</h2></label>
 <select name="week_number">
