assigned teacher to student appointment protected signup routes, created valid params helper

--- a/app/views/appointments/index.erb
+++ b/app/views/appointments/index.erb
@@ -1,4 +1,6 @@
 <h1>All Appointments</h1>
+
+<h2><a href="/appointments/new">Create New Appointment</a></h2>
 <% appointments_sorted = @appointments.sort do |a, b| %>
 <% a.week_number <=> b.week_number %>
 <% end %>
