--- a/app/views/appointments/show.erb
+++ b/app/views/appointments/show.erb
@@ -1,9 +1,10 @@
-<h1>Single Appointment for <%= @student.name.capitalize %></h1>
+<h1>Appointment Confirmation for <%= @student.name.capitalize %></h1>
 <h2>Week Number: <%=@appointment.week_number %></h2><br>
 <h3>Lesson Type: <%=@appointment.name%></h3><br>
 <h4>Date: <%=@appointment.start.strftime("%B %d, %Y")%></h4><br>
 <h4>Start Time: <%=@appointment.start.strftime("%I:%M %p")%></h4><br>
 <h4>End Time: <%=@appointment.end.strftime("%I:%M %p")%></h4><br>
+<h4>Teacher: <%=@appointment.teacher.name%></h4><br>
 
 <form method="GET" action="/appointments/<%= @appointment.id %>/edit">
 <input type="submit" name="submit" value="Edit">
