--- a/app/views/students/show.erb
+++ b/app/views/students/show.erb
@@ -21,6 +21,12 @@
 
 <% end %>
 
+<section>
+<a href="/appointments">View All Appointments</a>
+<a href="/students/logout">Student Logout</a>
+<a href="/teachers/logout">Teacher Logout</a>
+</section>
+
 
 
 
