--- a/app/views/appointments/edit.erb
+++ b/app/views/appointments/edit.erb
@@ -76,6 +76,16 @@
 <input type="checkbox" id="afternoon6" name="appointment[time]" value="17">
 <label for="afternoon6">5:00pm-5:50pm</label><br><br>
 
+<div>
+<h2>Please Choose a Teacher (Currently <%= @appointment.teacher.name%>)</h2>
+<select name="teacher[name]">
+    <option value="">--Please choose an option--</option>
+    <% Teacher.all.each do |teacher| %>
+    <option value="<%= teacher.name %>"><%= teacher.name %></option>
+    <% end %>
+</select>
+</div><br>
+
 <input type="submit" value="Submit Edits">
 </form>
 
