--- a/app/views/appointments/new.erb
+++ b/app/views/appointments/new.erb
@@ -1,4 +1,4 @@
-<h1>Appointments</h1>
+<h1>Create a New Appointment</h1>
 <form method="POST" action="/appointments">
 <div>
 <label for="week_number"><h2>Choose Week</h2></label>
@@ -81,7 +81,15 @@
 </select><br><br>
 </div>
 
-
+<div>
+<h2>Please Choose a Teacher</h2>
+<select name="teacher[name]">
+    <option value="">--Please choose an option--</option>
+    <% Teacher.all.each do |teacher| %>
+    <option value="<%= teacher.name %>"><%= teacher.name %></option>
+    <% end %>
+</select>
+</div><br>
 <input type="submit" value="Submit">
 </form>
     
