--- a/app/views/students/logout.erb
+++ b/app/views/students/logout.erb
@@ -1,4 +1,4 @@
-<h2>Logout?</h2>
+<h2>Logout <%= student_current_user %>?</h2>
 <form action="/students/logout" method="POST">
 <input type="submit" value="Logout">
 </form>
