--- a/app/views/students/signup.erb
+++ b/app/views/students/signup.erb
@@ -1,5 +1,5 @@
 <h1>Student Sign Up</h1>
-<form method="POST" action="/signup">
+<form method="POST" action="/students/signup">
 <label for="name">Name: </label>
 <input type="text" name="student[name]"><br>
 
