--- a/app/views/appointments/new.erb
+++ b/app/views/appointments/new.erb
@@ -1,8 +1,9 @@
 <h1>Create a New Appointment</h1>
+
 <form method="POST" action="/appointments">
 <div>
 <label for="week_number"><h2>Choose Week</h2></label>
-<select name="week_number">
+<select name="appointment[week_number]">
     <option value="">--Please choose an option--</option>
     <option value="35" name="week1">Week 1, <%=Date.commercial(2020, 35)%></option>
     <option value="36" name="week1">Week 2, <%=Date.commercial(2020, 36)%></option>
@@ -25,55 +26,55 @@
 
 <div>
 <h2>Days of the Week</h2>
-<input type="checkbox" id="monday" name="day" value="1">
+<input type="checkbox" id="monday" name="appointment[day]" value="1">
 <label for="monday">Monday</label><br>
 
-<input type="checkbox" id="tuesday" name="day" value="2">
+<input type="checkbox" id="tuesday" name="appointment[day]" value="2">
 <label for="tuesday">Tuesday</label><br>
 
-<input type="checkbox" id="wednesday" name="day" value="3">
+<input type="checkbox" id="wednesday" name="appointment[day]" value="3">
 <label for="wednesday">Wednesday</label><br>
 
-<input type="checkbox" id="thursday" name="day" value="4">
+<input type="checkbox" id="thursday" name="appointment[day]" value="4">
 <label for="thursday">Thursday</label><br>
 
-<input type="checkbox" id="friday" name="day" value="5">
+<input type="checkbox" id="friday" name="appointment[day]" value="5">
 <label for="friday">Friday</label><br>
 </div>
 <br>
 <div>
 <h2>Times Available</h2>
-<input type="checkbox" id="morning1" name="time" value=9>
+<input type="checkbox" id="morning1" name="appointment[time]" value=9>
 <label for="morning1">9:00am-9:50am</label><br>
 
-<input type="checkbox" id="morning2" name="time" value="10">
+<input type="checkbox" id="morning2" name="appointment[time]" value="10">
 <label for="morning2">10:00am-10:50am</label><br>
 
-<input type="checkbox" id="morning3" name="time" value="11">
+<input type="checkbox" id="morning3" name="appointment[time]" value="11">
 <label for="morning3">11:00am-11:50am</label><br>
 
-<input type="checkbox" id="afternoon1" name="time" value="12">
+<input type="checkbox" id="afternoon1" name="appointment[time]" value="12">
 <label for="afternoon1">12:00pm-12:50pm</label><br>
 
-<input type="checkbox" id="afternoon2" name="time" value="13">
+<input type="checkbox" id="afternoon2" name="appointment[time]" value="13">
 <label for="afternoon2">1:00pm-1:50pm</label><br>
 
-<input type="checkbox" id="afternoon3" name="time" value="14">
+<input type="checkbox" id="afternoon3" name="appointment[time]" value="14">
 <label for="afternoon3">2:00pm-2:50pm</label><br>
 
-<input type="checkbox" id="afternoon4" name="time" value="15">
+<input type="checkbox" id="afternoon4" name="appointment[time]" value="15">
 <label for="afternoon4">3:00pm-3:50pm</label><br>
 
-<input type="checkbox" id="afternoon5" name="time" value="16">
+<input type="checkbox" id="afternoon5" name="appointment[time]" value="16">
 <label for="afternoon5">4:00pm-4:50pm</label><br>
 
-<input type="checkbox" id="afternoon6" name="time" value="17">
+<input type="checkbox" id="afternoon6" name="appointment[time]" value="17">
 <label for="afternoon6">5:00pm-5:50pm</label><br>
 </div>
 
 <div>
 <label for="appointment-type"><h2>Choose Appointment Type</h2></label>
-<select name="name">
+<select name="appointment[name]">
     <option value="">--Please choose an option--</option>
     <option value="Drum Lesson" name="drum">Drum Lesson</option>
     <option value="Guitar Lesson"name="guitar">Guitar Lesson</option>
@@ -82,6 +83,15 @@
 </div>
 
 <div>
+<% if logged_in? && teacher_current_user && is_teacher? %>
+<h2>Please Choose a Student</h2>
+<select name="student[name]">
+    <option value="">--Please choose an option</option>
+    <% Student.all.each do |student| %>
+    <option value="<%= student.name %>"><%= student.name%></option>
+    <% end %>
+</select>
+<% elsif logged_in? && student_current_user && is_student?%>
 <h2>Please Choose a Teacher</h2>
 <select name="teacher[name]">
     <option value="">--Please choose an option--</option>
@@ -89,7 +99,11 @@
     <option value="<%= teacher.name %>"><%= teacher.name %></option>
     <% end %>
 </select>
+<% else %>
+    <h2>Log in to View</h2>
+<% end %>
 </div><br>
+
 <input type="submit" value="Submit">
 </form>
     
