--- a/app/views/teachers/logout.erb
+++ b/app/views/teachers/logout.erb
@@ -1,4 +1,4 @@
-<h2>Logout?</h2>
+<h2>Logout <%= teacher_current_user.name %>?</h2>
 <form action="/teachers/logout" method="POST">
 <input type="submit" value="Logout">
 </form>
