--- a/app/views/students/show.erb
+++ b/app/views/students/show.erb
@@ -9,8 +9,7 @@
 <h4>Date: <%=appt.start.strftime("%B %d, %Y")%></h4><br>
 <h4>Start Time: <%=appt.start.strftime("%I:%M %p")%></h4><br>
 <h4>End Time: <%=appt.end.strftime("%I:%M %p")%></h4><br>
-<% @teacher = Teacher.find_by_id(appt.teacher_id) %>
-<h4>Teacher: <%= @teacher.name if @teacher != nil %></h4><br>
+<h4>Teacher: <%= appt.teacher.try(:name) %></h4><br>
 
 <form method="GET" action="/appointments/<%= appt.id %>/edit">
 <input type="submit" name="submit" value="Edit">
