--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,13 +1,14 @@
-<h1>Welcome to Lessons Signup!</h1>
-<div>
-<h2>Teachers</h2>
-<p>Please click here to <a href="/teachers/signup">Signup</a></p>
-<p>or click here to <a href="/teachers/login">Login</a></p>
-</div>
 
-<div>
-<h2>Students</h2>
-<p>Please click here to <a href="/students/signup">Signup</a></p>
-<p>or click here to <a href="/students/login">Login</a></p>
-</div>
+<div class="welcome">
+    <div class="column">
+    <h2>Teachers</h2>
+    <p><a href="/teachers/signup">Signup</a></p>
+    <p><a href="/teachers/login">Login</a></p>
+    </div>
 
+    <div class="column">
+    <h2>Students</h2>
+    <p><a href="/students/signup">Signup</a></p>
+    <p><a href="/students/login">Login</a></p>
+    </div>
+</div>
