--- a/app/views/appointments/index.erb
+++ b/app/views/appointments/index.erb
@@ -1,32 +1,34 @@
-<h1>All Appointments</h1>
 
-<h2><a href="/appointments/new">Create New Appointment</a></h2>
+<div class="navbar">
+<h2>All Appointments</h2>
+<h3><a href="/appointments/new">Create New Appointment</a></h3>
 
 <% if logged_in? && student_current_user && is_student? %>
-    <h2><a href="/students/<%= student_current_user.id %>/appointments">Show All My Appointments (Student)</a></h2>
+    <h3><a href="/students/<%= student_current_user.id %>/appointments">Show All My Appointments (Student)</a></h3>
 <% elsif logged_in? && teacher_current_user && is_teacher? %>
-    <h2><a href="/teachers/<%= teacher_current_user.id %>/appointments">Show All My Appointments (Teacher)</a></h2>
+    <h3><a href="/teachers/<%= teacher_current_user.id %>/appointments">Show All My Appointments (Teacher)</a></h3>
 <% else %>
-    <h2>No Appointments to Show</h2>
+    <h3>No Appointments to Show</h3>
 <% end %>
 
 <% if logged_in? && student_current_user && is_student? %>
-    <button><a href="students/logout">Student Logout</a></button>
+    <h3><a href="students/logout">Student Logout</a></h3>
 <% elsif logged_in? && teacher_current_user && is_teacher? %>
-    <button><a href="teachers/logout">Teacher Logout</a></button>
+    <h3><a href="teachers/logout">Teacher Logout</a></h3>
 <% else %> 
-    <h2>Please login</h2>
+    <h3>Please login</h3>
 <% end %>
+</div>
 
-<% appointments_sorted = @appointments.sort do |a, b| %>
-<% a.week_number <=> b.week_number %>
+<section class="listappts">
+<ul>
+<% Appointment.sort_appointments.each do |appt| %>
+<li><h3>Week Number: <%=appt.week_number%></h3>
+<li><p>Lesson Type: <%=appt.name%></p>
+<li><p>Date: <%=appt.start.strftime("%B %d, %Y")%></p>
+<li><p>Start Time: <%=appt.start.strftime("%I:%M %p")%></p>
+<li><p>End Time: <%=appt.end.strftime("%I:%M %p")%></p>
+<li><p>Student: <%= appt.student.name.capitalize %></p>
 <% end %>
-
-<% appointments_sorted.each do |appt| %>
-<h2>Week Number: <%=appt.week_number%></h2><br>
-<h3>Lesson Type: <%=appt.name%></h3><br>
-<h4>Date: <%=appt.start.strftime("%B %d, %Y")%></h4><br>
-<h4>Start Time: <%=appt.start.strftime("%I:%M %p")%></h4><br>
-<h4>End Time: <%=appt.end.strftime("%I:%M %p")%></h4><br>
-<h4>Student: <%= appt.student.name.capitalize %></h4><br>
-<% end.sort %>
+</ul>
+</section>
