--- a/app/views/appointments/new.erb
+++ b/app/views/appointments/new.erb
@@ -85,18 +85,18 @@
 <div>
 <% if is_teacher? %>
 <h2>Please Choose a Student</h2>
-<select name="student[name]">
+<select name="appointment[student_id]">
     <option value="">--Please choose an option</option>
     <% Student.all.each do |student| #student id and change params%>
-    <option value="<%= student.name %>"><%= student.name%></option>
+    <option value="<%= student.id %>"><%= student.name%></option>
     <% end %>
 </select>
 <% elsif is_student? %>
 <h2>Please Choose a Teacher</h2>
-<select name="teacher[name]">
+<select name="appointment[teacher_id]">
     <option value="">--Please choose an option--</option>
     <% Teacher.all.each do |teacher| %>
-    <option value="<%= teacher.name %>"><%= teacher.name %></option>
+    <option value="<%= teacher.id %>"><%= teacher.name %></option>
     <% end %>
 </select>
 <% else %>
