--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,10 +13,29 @@
 
   /* --- Welcome Page Styles --- */
   body {
-    background-color: lightgreen;
+    background-image: url('/public/images/watch-background.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
     color: #333;
     font-family: Helvetica, Sans-Serif;
     line-height: 18px;
+  }
+
+  .top-header {
+    width: 100%;
+    height: 25%;
+    background-color: gray;
+  }
+
+  .top-header h1 {
+    text-align: left;
+    padding-top: 40px;
+    padding-left: 30px;
+  }
+
+  .column {
+    float: left;
+    width: 50%;
   }
 
   .wrapper {
@@ -28,6 +47,32 @@
     max-width: 960px;
     padding: 2.25%; /* 18px / 800px */
     width: 85%;
+  }
+
+  .navbar-left {
+    background-color: gray;
+    display: inline;
+  }
+
+  .navbar {
+    background-color: gray;
+    height: 25%
+    width: 85%
+    display: inline;
+  }
+
+  .navbar a {
+    text-decoration: none;
+    color: black;
+  }
+
+
+  .listappts {
+
+  }
+
+  .listappts ul li h3 {
+    text-decoration: underline;
   }
 
   h1 {
@@ -77,9 +122,9 @@
   }
 
   footer.branding {
-    border-top: 2px solid #ccc;
-    margin-top: 20px;
-    padding-top: 20px;
+    border-top: 1px solid #ccc;
+    margin-top: 10px;
+    padding-top: 10px;
   }
 }
 
