--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,7 +15,7 @@
 </head>
 <body>
 <header class="top-header">
-  <h1>Lessons Signup</h1>
+  <h1>Lessons Schedule</h1>
 </header>
   <div class="wrapper">
  
