--- a/app/views/appointments/show.erb
+++ b/app/views/appointments/show.erb
@@ -1,4 +1,4 @@
-<h1>Appointment Confirmation for <%= @student.name.split.map(&:capitalize).join(" ") %></h1>
+<h2>Appointment Confirmation for <%= @student.name.split.map(&:capitalize).join(" ") %></h2>
 <h2>Week Number: <%=@appointment.week_number %></h2><br>
 <h3>Lesson Type: <%=@appointment.name%></h3><br>
 <h4>Date: <%=@appointment.start.strftime("%B %d, %Y")%></h4><br>
@@ -6,32 +6,39 @@
 <h4>End Time: <%=@appointment.end.strftime("%I:%M %p")%></h4><br>
 <h4>Teacher: <%=@appointment.teacher.name %></h4><br>
 
-<form method="GET" action="/appointments/<%= @appointment.id %>/edit">
-<input type="submit" name="submit" value="Edit">
-</form><br>
+<div class="row">
+    <div class-="column">
+        <form method="GET" action="/appointments/<%= @appointment.id %>/edit">
+        <input type="submit" name="submit" value="Edit">
+        </form><br>
+    </div>
+    <div class="column">
+        <form method="POST" action="/appointments/<%= @appointment.id %>/delete">
+        <input type="hidden" id="hidden" name="_method" value="delete">
+        <input type="submit" name="submit" value="Delete">
+        </form><br>
+    </div>
+</div>
 
-<form method="POST" action="/appointments/<%= @appointment.id %>/delete">
-<input type="hidden" id="hidden" name="_method" value="delete">
-<input type="submit" name="submit" value="Delete">
-</form><br>
-<h2><a href="/appointments">View All Appointments</a></h2>
+<div class="navbar">
+    <li><h3><a href="/appointments">View All Appointments</a></h3>
 
-<% if logged_in? && student_current_user && is_student? %>
-    <h2><a href="/students/<%= student_current_user.id%>/appointments">View All My Appointments (Student)</a></h2>
-<% elsif logged_in? && teacher_current_user && is_teacher? %>
-    <h2><a href="/teachers/<%= teacher_current_user.id%>/appointments">View All My Appointments (Teacher)</a></h2>
-<% else %>
-    <h2>Please login to view appointments for this user.</h2>
-<% end %>
+    <% if logged_in? && student_current_user && is_student? %>
+        <li><h3><a href="/students/<%= student_current_user.id%>/appointments">View All My Appointments (Student)</a></h3>
+    <% elsif logged_in? && teacher_current_user && is_teacher? %>
+        <li><h3><a href="/teachers/<%= teacher_current_user.id%>/appointments">View All My Appointments (Teacher)</a></h3>
+    <% else %>
+        <li><h3>Please login to view appointments for this user.</h3>
+    <% end %>
 
-<% if logged_in? && student_current_user && is_student? %>
-    <h2><a href="/students/logout">Student Logout</a></h2>
-<% elsif logged_in? && teacher_current_user && is_teacher? %>
-    <h2><a href="/teachers/logout">Teacher Logout</a></h2>
-<% else %>
-    <h2>You must be logged in to view</h2>
-<% end %>
-
+    <% if logged_in? && student_current_user && is_student? %>
+        <li><h3><a href="/students/logout">Student Logout</a></h3>
+    <% elsif logged_in? && teacher_current_user && is_teacher? %>
+        <li><h3><a href="/teachers/logout">Teacher Logout</a></h3>
+    <% else %>
+        <li><h3>You must be logged in to view</h3>
+    <% end %>
+</div>
 
 
 
