--- a/app/views/students/show.erb
+++ b/app/views/students/show.erb
@@ -1,30 +1,34 @@
-<h1>Appointments for <%= @student.name.split.map(&:capitalize).join(" ") %></h1>
-<%sorted_appointments = @student.appointments.sort do |a, b| %>
-<% a.week_number <=> b.week_number %>
-<% end %>
+<div class="navbar">
+    <li><h3><a href="/appointments">View All Appointments</a></h3>
+    <li><h3><a href="/students/logout">Student Logout</a></h3>
+</div>
+<br><br>
 
-<% sorted_appointments.each do |appt|%>
-<h2>Week Number: <%=appt.week_number%></h2><br>
-<h3>Lesson Type: <%=appt.name%></h3><br>
-<h4>Date: <%=appt.start.strftime("%B %d, %Y")%></h4><br>
-<h4>Start Time: <%=appt.start.strftime("%I:%M %p")%></h4><br>
-<h4>End Time: <%=appt.end.strftime("%I:%M %p")%></h4><br>
+<h2>Appointments for <%= @student.name.split.map(&:capitalize).join(" ") %></h2>
+
+<% student_appointments.each do |appt|%>
+<h2>Week Number: <%=appt.week_number%></h2>
+<h3>Lesson Type: <%=appt.name%></h3>
+<h4>Date: <%=appt.start.strftime("%B %d, %Y")%></h4>
+<h4>Start Time: <%=appt.start.strftime("%I:%M %p")%></h4>
+<h4>End Time: <%=appt.end.strftime("%I:%M %p")%></h4>
 <h4>Teacher: <%= appt.teacher.try(:name) %></h4><br>
 
-<form method="GET" action="/appointments/<%= appt.id %>/edit">
-<input type="submit" name="submit" value="Edit">
-</form><br>
+<div class="row">
+    <div class="column">
+        <form method="GET" action="/appointments/<%= appt.id %>/edit">
+        <input type="submit" name="submit" value="Edit">
+        </form><br>
+    </div>
 
-<form method="POST" action="/appointments/<%= appt.id %>/delete">
-<input type="hidden" id="hidden" name="_method" value="delete">
-<input type="submit" name="submit" value="Delete">
-</form><br>
-
+    <div class="column">
+        <form method="POST" action="/appointments/<%= appt.id %>/delete">
+        <input type="hidden" id="hidden" name="_method" value="delete">
+        <input type="submit" name="submit" value="Delete">
+        </form><br>
+    </div>
+</div>
 <% end %>
-
-
-<h2><a href="/appointments">View All Appointments</a></h2>
-<h2><a href="/students/logout">Student Logout</a></h2>
 
 
 
