--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,12 +1,12 @@
 
-<div class="welcome">
-    <div class="column">
+<div class="container">
+    <div class="one">
     <h2>Teachers</h2>
     <p><a href="/teachers/signup">Signup</a></p>
     <p><a href="/teachers/login">Login</a></p>
     </div>
 
-    <div class="column">
+    <div class="two">
     <h2>Students</h2>
     <p><a href="/students/signup">Signup</a></p>
     <p><a href="/students/login">Login</a></p>
