--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -9,16 +9,18 @@
   html, body {
     height: 100%;
     width: 100%;
+    background: url('/public/images/watch-background.jpg') fixed no-repeat;
+    background-size: cover;
+    z-index: 1;
   }
 
   /* --- Welcome Page Styles --- */
   body {
-    background-image: url('/public/images/watch-background.jpg');
+    background-image: url('/public/images/watch-background.jpg') fixed no-repeat;
     background-size: cover;
-    background-repeat: no-repeat;
     color: #333;
     font-family: Helvetica, Sans-Serif;
-    line-height: 18px;
+    
   }
 
   .top-header {
@@ -33,9 +35,16 @@
     padding-left: 30px;
   }
 
-  .column {
-    float: left;
-    width: 50%;
+  .container {
+    display: flex;
+  }
+
+  .one {
+   flex: 0 0 65%; 
+  }
+
+  .two {
+    flex: 1;
   }
 
   .wrapper {
@@ -49,42 +58,83 @@
     width: 85%;
   }
 
-  .navbar-left {
-    background-color: gray;
-    display: inline;
-  }
-
   .navbar {
     background-color: gray;
-    height: 25%
-    width: 85%
-    display: inline;
+    list-style-type: none;
+    text-align: center; 
+    padding: 0;
+    margin: 0;
   }
-
+  
+  .navbar li {
+    display: inline-block;
+    font-size: 20px;
+    padding: 5px 40px;
+  }
   .navbar a {
     text-decoration: none;
     color: black;
   }
 
-
-  .listappts {
-
+  .navbar a:hover {
+    color: #fff;
   }
+
+  table, th, td {
+    text-align: left;
+    padding-top: 10px;
+    font-size: 14px;
+  }
+
+  table {
+    width: 100%;
+  }
+
+  th, td {
+    border-bottom: 2px gray;
+  }
+
+  tr:nth-child(even) {background-color: #f2f2f2;}
+
+  th {
+    background-color: lightblue;
+    height: 30px;
+    font-size: 16px;
+  }
+
+
 
   .listappts ul li h3 {
     text-decoration: underline;
   }
 
+  .row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  
+  .column {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+    padding: 0px 40px;
+  }
+
   h1 {
     font-size: 36px;
     line-height: 54px;
+    color: white;
   }
 
   h2 {
-    border-bottom: 2px solid #ccc;
     font-size: 24px;
     line-height: 36px;
     margin-bottom: 16px;
+    background-color: lightblue;
+    padding-left: 10px;
   }
 
   h3 {
@@ -123,8 +173,9 @@
 
   footer.branding {
     border-top: 1px solid #ccc;
-    margin-top: 10px;
-    padding-top: 10px;
+    padding-top: 25px;
+    background-color: gray;
+    height: 25%;
   }
 }
 
