--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -9,14 +9,11 @@
   html, body {
     height: 100%;
     width: 100%;
-    background: url('/public/images/watch-background.jpg') fixed no-repeat;
-    background-size: cover;
-    z-index: 1;
   }
 
   /* --- Welcome Page Styles --- */
   body {
-    background-image: url('/public/images/watch-background.jpg') fixed no-repeat;
+    background-image: url('/public/images/watch-background.jpg') no-repeat;
     background-size: cover;
     color: #333;
     font-family: Helvetica, Sans-Serif;
@@ -33,6 +30,15 @@
     text-align: left;
     padding-top: 40px;
     padding-left: 30px;
+  }
+
+  .flash {
+    background-color: red;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    height: 30px;
+    padding-top: 8px;
   }
 
   .container {
@@ -176,6 +182,12 @@
     padding-top: 25px;
     background-color: gray;
     height: 25%;
+    text-align: center;
+  }
+
+  div #github {
+    display: inline-block;
+    padding-top: 10px;
   }
 }
 
