--- a/app/views/appointments/new.erb
+++ b/app/views/appointments/new.erb
@@ -26,49 +26,49 @@
 
 <div>
 <h2>Days of the Week</h2>
-<input type="checkbox" id="monday" name="appointment[day]" value="1">
+<input type="radio" id="monday" name="appointment[day]" value="1">
 <label for="monday">Monday</label><br>
 
-<input type="checkbox" id="tuesday" name="appointment[day]" value="2">
+<input type="radio" id="tuesday" name="appointment[day]" value="2">
 <label for="tuesday">Tuesday</label><br>
 
-<input type="checkbox" id="wednesday" name="appointment[day]" value="3">
+<input type="radio" id="wednesday" name="appointment[day]" value="3">
 <label for="wednesday">Wednesday</label><br>
 
-<input type="checkbox" id="thursday" name="appointment[day]" value="4">
+<input type="radio" id="thursday" name="appointment[day]" value="4">
 <label for="thursday">Thursday</label><br>
 
-<input type="checkbox" id="friday" name="appointment[day]" value="5">
+<input type="radio" id="friday" name="appointment[day]" value="5">
 <label for="friday">Friday</label><br>
 </div>
 <br>
 <div>
 <h2>Times Available</h2>
-<input type="checkbox" id="morning1" name="appointment[time]" value=9>
+<input type="radio" id="morning1" name="appointment[time]" value=9>
 <label for="morning1">9:00am-9:50am</label><br>
 
-<input type="checkbox" id="morning2" name="appointment[time]" value="10">
+<input type="radio" id="morning2" name="appointment[time]" value="10">
 <label for="morning2">10:00am-10:50am</label><br>
 
-<input type="checkbox" id="morning3" name="appointment[time]" value="11">
+<input type="radio" id="morning3" name="appointment[time]" value="11">
 <label for="morning3">11:00am-11:50am</label><br>
 
-<input type="checkbox" id="afternoon1" name="appointment[time]" value="12">
+<input type="radio" id="afternoon1" name="appointment[time]" value="12">
 <label for="afternoon1">12:00pm-12:50pm</label><br>
 
-<input type="checkbox" id="afternoon2" name="appointment[time]" value="13">
+<input type="radio" id="afternoon2" name="appointment[time]" value="13">
 <label for="afternoon2">1:00pm-1:50pm</label><br>
 
-<input type="checkbox" id="afternoon3" name="appointment[time]" value="14">
+<input type="radio" id="afternoon3" name="appointment[time]" value="14">
 <label for="afternoon3">2:00pm-2:50pm</label><br>
 
-<input type="checkbox" id="afternoon4" name="appointment[time]" value="15">
+<input type="radio" id="afternoon4" name="appointment[time]" value="15">
 <label for="afternoon4">3:00pm-3:50pm</label><br>
 
-<input type="checkbox" id="afternoon5" name="appointment[time]" value="16">
+<input type="radio" id="afternoon5" name="appointment[time]" value="16">
 <label for="afternoon5">4:00pm-4:50pm</label><br>
 
-<input type="checkbox" id="afternoon6" name="appointment[time]" value="17">
+<input type="radio" id="afternoon6" name="appointment[time]" value="17">
 <label for="afternoon6">5:00pm-5:50pm</label><br>
 </div>
 
