--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -13,6 +13,7 @@
 
   <link rel="stylesheet" href="/stylesheets/main.css" />
 </head>
+<div class="main">
 <body>
 <header class="top-header">
   <h1>Lessons Schedule</h1>
@@ -33,16 +34,16 @@
 
     
   </div>
-  <footer class="branding">
+<footer class="branding">
       <small>&copy; 2020 <strong>Shiba</strong></small><br>
       <div id="github">
-         <img src="/public/images/github.png" width="40" alt="github">    
+         <img src="/images/github.png" width="40" alt="github">    
       </div>
-  </footer>
-
+</footer>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
   <!--[if lt IE 7]>
     <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.2/CFInstall.min.js"></script>
     <script>window.attachEvent("onload",function(){CFInstall.check({mode:"overlay"})})</script>
   <![endif]-->
 </body>
+
