--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,23 +13,26 @@
 
   /* --- Welcome Page Styles --- */
   body {
+    display: flex;
+    flex-direction: column;
     background: url('/images/watch-background.jpg') no-repeat;
     background-size: cover;
     color: #333;
     font-family: Helvetica, Sans-Serif;
   }
 
-  .top-header {
-    width: 100%;
-    height: 15%;
-    background-color: gray;
-  }
+header,
+footer {
+  flex: 0 0 auto;
+  padding: 0.5rem 0.75rem;
+  background-color: gray;
+}
 
-  .top-header h1 {
-    text-align: left;
-    padding-top: 40px;
-    padding-left: 30px;
-  }
+.top-header h1 {
+  text-align: left;
+  padding-top: 20px;
+  padding-left: 30px;
+}
 
   .flash {
     background-color: red;
@@ -49,7 +52,6 @@
     margin: 16px auto;
     max-width: 960px;
     padding: 2.25%; /* 18px / 800px */
-    padding-bottom: 15%;
     width: 85%;
   }
 
@@ -140,7 +142,11 @@
   }
 
   .main {
-    overflow: hidden;
+    flex: 1 1 auto;
+    overflow-y: scroll;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    width: 100%;
   }
 
   .content {
@@ -166,8 +172,8 @@
     left: 0;
     position: absolute;
     width: 100%;
-    height: 15%;
-    padding-top: 25px;
+    height: 10%;
+    padding-top: 15px;
     background-color: gray;
     text-align: center;
   }
