checked required added to radio buttons

--- a/app/views/appointments/new.erb
+++ b/app/views/appointments/new.erb
@@ -26,7 +26,7 @@
 
 <div>
 <h2>Days of the Week</h2>
-<input type="radio" id="monday" name="appointment[day]" value="1">
+<input type="radio" id="monday" name="appointment[day]" value="1" checked required>
 <label for="monday">Monday</label><br>
 
 <input type="radio" id="tuesday" name="appointment[day]" value="2">
@@ -44,7 +44,7 @@
 <br>
 <div>
 <h2>Times Available</h2>
-<input type="radio" id="morning1" name="appointment[time]" value=9>
+<input type="radio" id="morning1" name="appointment[time]" value=9 checked required>
 <label for="morning1">9:00am-9:50am</label><br>
 
 <input type="radio" id="morning2" name="appointment[time]" value="10">
