--- a/app/views/appointments/edit.erb
+++ b/app/views/appointments/edit.erb
@@ -33,7 +33,7 @@
 
 <h2>Choose a New Day (Current Day is <%=@appointment.start.strftime("%B %d, %Y")%>)</h2><br>
 
-<input type="radio" id="monday" name="appointment[day]" value="1">
+<input type="radio" id="monday" name="appointment[day]" value="1" checked required>
 <label for="monday">Monday</label><br>
 
 <input type="radio" id="tuesday" name="appointment[day]" value="2">
@@ -49,7 +49,7 @@
 <label for="friday">Friday</label><br><br>
 
 <h2>Choose Start Time (Current Time is <%=@appointment.start.strftime("%I:%M %p")%>)</h2>
-<input type="radio" id="morning1" name="appointment[time]" value=9>
+<input type="radio" id="morning1" name="appointment[time]" value=9 checked required>
 <label for="morning1">9:00am-9:50am</label><br>
 
 <input type="radio" id="morning2" name="appointment[time]" value="10">
