add <br> after submit button

--- a/app/views/appointments/edit.erb
+++ b/app/views/appointments/edit.erb
@@ -98,8 +98,8 @@
 <% end %>
 </div><br>
 
-<input type="submit" value="Submit Edits">
-</form>
+<input type="submit" value="Submit Edits"><br>
+</form><br><br>
 
 
 
