--- a/app/views/appointments/new.erb
+++ b/app/views/appointments/new.erb
@@ -104,7 +104,7 @@
 <% end %>
 </div><br>
 
-<input type="submit" value="Submit">
-</form>
+<input type="submit" value="Submit"><br>
+</form><br><br>
     
     
